--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,24 @@
-### Node.js ###
-node_modules/
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
 
-### Vite ###
-.vite/
-dist/
+node_modules
+dist
+dist-ssr
+*.local
 
-### Tailwind CSS ###
-*.css.map
-
-### Editor & System Files ###
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
-.idea/
-.vscode/
-*.swp
-
-### Environment Variables ###
-.env
-.env.local
-.env.*.local
-
-### Log Files ###
-*.log
-
-### Build Output ###
-out/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
